# Advanced-Programming-2-Anomaly-Inspection-Web-App

./: .gitignore  README.md  UML.drawio
AnomalyDetectionServer/: AnomalyDetector.h  CLI.cpp  CLI.h  CMakeLists.txt  MainTrain.cpp  Server.cpp  Server.h  commands.h
WebServer/: anomaly.csv  learn.csv  package-lock.json  package.json  server.js
WebServer/controller/: package-lock.json  package.json  server.js
WebServer/files/: style.css
WebServer/model/: model.js
WebServer/storyTwo/: package-lock.json  storyTwo.py  storytwo.js
WebServer/view/: index.html  script.js
